# telegram-standup-bot

./: .gitignore  docker-compose.deploy.yml  docker-compose.dev.yml  pyproject.toml
telegram-standup-bot/: app.py  bot.py  reports.py  storage.py
telegram-standup-bot/handlers/: manage_users_in_standup.py  start_bot.py  user_report.py  utils.py
telegram-standup-logger/: Dockerfile  pyproject.toml
telegram-standup-logger/telegram_standup_logger/: app.py
telegram-standup-logger/tests/: test_telegram_standup_logger.py
telegram-standup-viewer/: .env.development  Dockerfile  README.md  package-lock.json  package.json
telegram-standup-viewer/src/: App.vue  main.ts
telegram-standup-viewer/src/components/: UserReport.vue
telegram-standup-viewer/src/views/: Home.vue
