[tool.poetry]
name = "telegram-standup-logger"
version = "0.1.0"
description = ""
authors = ["Bornikov Vladislav <bortnikov.vladislav@e-sakha.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.0"
uvicorn = "^0.11.3"
envparse = "^0.2.0"
motor = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
